Fixed alignment issues on loading page

--- a/css/Loading.scss
+++ b/css/Loading.scss
@@ -1,6 +1,6 @@
 #loading{
-  margin: 50px auto;
-  font-size:35px;
+  margin: 50vh auto;
+  font-size: 35px;
   font-weight: 200;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
