--- a/css/Menu.scss
+++ b/css/Menu.scss
@@ -94,7 +94,6 @@ nav{
   background-color: white;
   background-clip: content-box; 
   box-sizing: content-box;
-  position: relative;
   cursor: pointer;
   transition: transform .4s, background-color .3s;
   
